Fixing or justifying FindBugs related warnings and errors